@@ -1,3 +1,6 @@
+2007-09-25  Ian Turner <ian@zmanda.com> (merged by dustin@zmanda.com)
+	* device-src/vfs-device.c: Use old VFS device specification.
+
 2007-09-25  Ian Turner <ian@zmanad.com> (merged by dustin@zmanda.com)
 	* server-src/amlabel.c: Don't dump core on successful labeling.
 
